--- a/src/app/player-page/player-page.component.css
+++ b/src/app/player-page/player-page.component.css
@@ -2,5 +2,11 @@
 .name{
     text-align: center;
 }
-.progress {height: 2rem;}
+td{
+    text-align: center;
+    color: black;
+}
+th{
+    text-align:center;
+}
 
