--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent1">
         <ul class="navbar-nav mr-auto">
         </ul>
-        <button class="btn btn-lg btn-secondary my-2 my-sm-0 " id="analysisButton">SUBMIT AN ANALYSIS FOR A PLAYER!</button>
+        <button class="btn btn-lg btn-secondary my-2 my-sm-0 " id="analysisButton" [routerLink]="['/submitFullAnalysis']">SUBMIT AN ANALYSIS FOR A PLAYER!</button>
         <button class="btn btn-lg btn-secondary my-2 my-sm-0 ">SUBMIT ATTRIBUTE RANKINGS FOR A PLAYER</button>
     </div>
 </nav>
