--- a/src/app/player-page/player-page.component.html
+++ b/src/app/player-page/player-page.component.html
@@ -1,19 +1,62 @@
 <div class="name">
-  <h1>ZION WILLIAMSON</h1>
-  <h3>SF🏀DUKE🏀290🏀6'8"</h3>
-  <h4>Grade: 89. Distribution below.</h4>
+  <h1>{{this.player.name}}</h1>
+  <h3>{{this.player.position}}🏀{{this.player.college}}🏀{{this.player.weight}}🏀{{this.player.height}}</h3>
+  <h4>Grade: {{this.getPlayerScore(this.player)}}. Average attribute rankings below.</h4>
 </div>
-
-
-<div class="progress">
-  <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"
-    data-toggle="tooltip" data-placement="top" title="Athleticism: 10/10"></div>
-  <div class="progress-bar bg-success" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0"
-    aria-valuemax="100"></div>
-  <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0"
-    aria-valuemax="100"></div>
-</div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Athleticism</th>
+      <th scope="col">Size</th>
+      <th scope="col">Defense</th>
+      <th scope="col">Shooting</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="table-success">
+      <td><h4>{{this.getAvg(this.player.attributes.athleticism).toFixed(2)}}</h4></td>
+      <td><h4>{{this.getAvg(this.player.attributes.size).toFixed(2)}}</h4></td>
+      <td><h4>{{this.getAvg(this.player.attributes.defense).toFixed(2)}}</h4></td>
+      <td><h4>{{this.getAvg(this.player.attributes.shooting).toFixed(2)}}</h4></td>
+    </tr>
+  </tbody>
+</table> 
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">NBA-Readiness</th>
+      <th scope="col">Dribbling</th>
+      <th scope="col">Potential</th>
+      <th scope="col">Passing</th>
+    </tr>
+  </thead>
+  <tbody>
+      <tbody>
+          <tr class="table-success">
+            <td><h4>{{this.getAvg(this.player.attributes.nba_ready).toFixed(2)}}</h4></td>
+            <td><h4>{{this.getAvg(this.player.attributes.dribbling).toFixed(2)}}</h4></td>
+            <td><h4>{{this.getAvg(this.player.attributes.potential).toFixed(2)}}</h4></td>
+            <td><h4>{{this.getAvg(this.player.attributes.passing).toFixed(2)}}</h4></td>
+          </tr>
+        </tbody>
+      </table> 
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Intangibles</th>
+            <th scope="col">Leadership</th>
+            <th scope="col">Projected Durability</th>
+          </tr>
+        </thead>
+        <tbody>
+    <tr class="table-success">
+      <td><h4>{{this.getAvg(this.player.attributes.intangibles).toFixed(2)}}</h4></td>
+      <td><h4>{{this.getAvg(this.player.attributes.leadership).toFixed(2)}}</h4></td>
+      <td><h4>{{this.getAvg(this.player.attributes.projectedDurability).toFixed(2)}}</h4></td>
+    </tr>
+  </tbody>
+</table> 
 <div class="jumbotron">
-  <h1 class="display-4">ANALYSIS</h1>
-  <h4>It uses utility classes for typography and spacing to space content out within the larger container.</h4>
+  <h1 class="display-4">ANALYSIS, BY: {{this.analysisContributor}}</h1>
+  <h4>{{this.analysisText}}</h4>
 </div>
