--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css';
 @import 'https://bootswatch.com/4/darkly/bootstrap.min.css';
+@import 'https://use.fontawesome.com/releases/v5.6.3/css/all.css';
