working analysis and attribute submit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
         <ul class="navbar-nav mr-auto">
         </ul>
         <button class="btn btn-lg btn-secondary my-2 my-sm-0 " id="analysisButton" [routerLink]="['/submitFullAnalysis']">SUBMIT AN ANALYSIS FOR A PLAYER!</button>
-        <button class="btn btn-lg btn-secondary my-2 my-sm-0 ">SUBMIT ATTRIBUTE RANKINGS FOR A PLAYER</button>
+        <button class="btn btn-lg btn-secondary my-2 my-sm-0 " [routerLink]="['/submitAttributes']">SUBMIT ATTRIBUTE RANKINGS FOR A PLAYER</button>
     </div>
 </nav>
