--- a/src/app/attribute-submit/attribute-submit.component.html
+++ b/src/app/attribute-submit/attribute-submit.component.html
@@ -9,29 +9,197 @@
           <fieldset>
             <div class="form-group">
               <label for="exampleSelect1">Name of player</label>
-              <select class="form-control" id="exampleSelect1">
-                  <option *ngFor="let player of this.players">{{player}}</option>
+              <select class="form-control" id="name">
+                <option *ngFor="let player of this.players">{{player}}</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleSelect1">Athleticism</label>
+              <select class="form-control" id="athleticism">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleSelect1">Size</label>
+              <select class="form-control" id="size">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleSelect1">Defense</label>
+              <select class="form-control" id="defense">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
               </select>
             </div>
             <div class="form-group">
               <label for="exampleSelect1">Shooting</label>
-              <select class="form-control" id="exampleSelect1">
+              <select class="form-control" id="shooting">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
               </select>
             </div>
             <div class="form-group">
-              <label for="exampleSelect1">Shooting</label>
-              <select class="form-control" id="exampleSelect1">
+              <label for="exampleSelect1">NBA-Readiness</label>
+              <select class="form-control" id="nba-readiness">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
               </select>
             </div>
-            <button type="submit" class="btn btn-lg btn-primary">Submit Rankings</button>
+            <div class="form-group">
+              <label for="exampleSelect1">Dribbling</label>
+              <select class="form-control" id="dribbling">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleSelect1">Potential</label>
+              <select class="form-control" id="potential">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleSelect1">Passing</label>
+              <select class="form-control" id="passing">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleSelect1">Intangibles</label>
+              <select class="form-control" id="intangibles">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleSelect1">Leadership</label>
+              <select class="form-control" id="leadership">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="exampleSelect1">Projected Durability</label>
+              <select class="form-control" id="durability">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+
+              </select>
+            </div>
+            <div class="alert alert-success" id="alert-good">
+              <button type="button" class="close" (click)="closeGoodAlert()">&times;</button>
+              <strong>Successfully submitted analysis. Thank you for your contributions!</strong>
+            </div>
+            <div class="alert alert-danger" id="alert-bad">
+              <button type="button" class="close" (click)="closeBadAlert()">&times;</button>
+              <strong>Error! Something went wrong.</strong>
+            </div>
+            <button type="button" (click)="submit()" class="btn btn-lg btn-primary">Submit Attributes&emsp;<i class="fas fa-basketball-ball {{this.spinning}}"></i></button>
           </fieldset>
         </form>
+
       </div>
     </div>
   </div>
