Working voting mechanism (almost)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         </ul>
-        <button class="btn btn-lg btn-secondary my-2 my-sm-0 ">VOTE ON ARTICLES!</button>
+        <button class="btn btn-lg btn-secondary my-2 my-sm-0 " [routerLink]="['/vote']">VOTE ON ARTICLES!</button>
     </div>
 </nav>
 <router-outlet></router-outlet>
