--- a/src/app/player-page/player-page.component.html
+++ b/src/app/player-page/player-page.component.html
@@ -1,5 +1,5 @@
 <div class="name">
-  <h1>{{this.player.name}}</h1>
+  <h1>{{this.capitalizeName(this.player.name)}}</h1>
   <h3>{{this.player.position}}🏀{{this.player.college}}🏀{{this.player.weight}}🏀{{this.player.height}}</h3>
   <h4>Grade: {{this.getPlayerScore(this.player)}}. Average attribute rankings below.</h4>
 </div>
