--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
                 <h1>{{x + 1}}.</h1>
             </div>
             <div class="col-lg-8">
-                <h1>{{this.playerData[x].name}}</h1>
+                <h1>{{this.capitalizeName(this.playerData[x].name)}}</h1>
                 <a class="btn btn-primary btn-lg" [routerLink]="['/player/' + this.playerData[x].name]" role="button">Read Scouting Analysis</a>
             </div>
             <div class="col-lg-1">
