--- a/src/app/article-vote/article-vote.component.html
+++ b/src/app/article-vote/article-vote.component.html
@@ -1,6 +1,10 @@
 <div class="topText">
   <h2>Vote on these articles written for:</h2>
-  <h1>{{this.capitalizeName(currentPlayer.name)}}</h1>
+  <h1>{{this.capitalizeName(currentPlayer.name)}}<i id="spinner" class="fas fa-basketball-ball fa-spin"></i></h1>
+</div>
+<div class="alert alert-danger" id="alert-bad">
+  <button type="button" class="close" (click)="closeBadAlert()">&times;</button>
+  <strong>Error! Something went wrong.</strong>
 </div>
 <div class="row">
   <div class="col">
